--- a/index.html
+++ b/index.html
@@ -4,11 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Homepage 4sale-IT</title>
+    <title>fancy name</title>
 </head>
 <body>
     <div class="header">
-
+        <div class="logo">Header Logo</div>
+        <ul>
+            <a href="#"><li>Contact</li></a>
+            <a href="#"><li>Sign in</li></a>
+            <a href="#"><li>Settings</li></a>
+        </ul>
     </div>
     <div class="top">
 
