--- a/index.html
+++ b/index.html
@@ -16,9 +16,19 @@
         </ul>
     </div>
     <div class="top">
-
+        <div>
+            <h1>Science is awesome</h1>
+            <div class="subtext">Science is great, but difficult. I want to help you get better and get a different perspective on science.</div>
+        </div>
+        <img src="#" alt="Awesome logo">
     </div>
     <div class="content">
+
+    </div>
+    <div class="review">
+
+    </div>
+    <div class="sign-up">
 
     </div>
     <div class="footer">
