--- a/index.html
+++ b/index.html
@@ -15,22 +15,47 @@
             <a href="#"><li>Settings</li></a>
         </ul>
     </div>
+
     <div class="top">
         <div>
             <h1>Science is awesome</h1>
             <div class="subtext">Science is great, but difficult. I want to help you get better and get a different perspective on science.</div>
+            <button>Sign up</button>
         </div>
         <img src="#" alt="Awesome logo">
     </div>
-    <div class="content">
 
+    <div class="content">
+        <h2>All the classes</h2>
+        <div>
+            <div class="one">
+                <img src="#" alt="math">
+                <div class="subtext">Lorem ipsum dolor sit amet, consetetur sadipscing elitr,</div>
+            </div>
+            <div class="two">
+                <img src="#" alt="computer science">
+                <div class="subtext">Lorem ipsum dolor sit amet, consetetur sadipscing elitr,</div>
+            </div>
+            <div class="three">
+                <img src="#" alt="chemistry">
+                <div class="subtext">Lorem ipsum dolor sit amet, consetetur sadipscing elitr,</div>
+            </div>
+            <div class="four">
+                <img src="#" alt="physics">
+                <div class="subtext">Lorem ipsum dolor sit amet, consetetur sadipscing elitr,</div>
+            </div>
+        </div>
+        
     </div>
+
     <div class="review">
 
     </div>
+
     <div class="sign-up">
 
     </div>
+
     <div class="footer">
         
     </div>
