change review to quote and add quote

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
     <div class="content">
         <h2>All the classes</h2>
-        <div>
+        <div class="img-and-text">
             <div class="one">
                 <img src="#" alt="math">
                 <div class="subtext">Lorem ipsum dolor sit amet, consetetur sadipscing elitr,</div>
@@ -45,11 +45,11 @@
                 <div class="subtext">Lorem ipsum dolor sit amet, consetetur sadipscing elitr,</div>
             </div>
         </div>
-        
     </div>
 
-    <div class="review">
-
+    <div class="quote">
+        <div class="quote-text">Look deep into nature, and then you will understand everything better.</div>
+        <div>-Albert Einstein</div>
     </div>
 
     <div class="sign-up">
