--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <div>
             <h1>Science is awesome</h1>
             <div class="subtext">Science is great, but difficult. I want to help you get better and get a different perspective on science.</div>
-            <button>Sign up</button>
+            <button type="button">Sign up</button>
         </div>
         <img src="#" alt="Awesome logo">
     </div>
@@ -53,7 +53,13 @@
     </div>
 
     <div class="sign-up">
-
+        <div class="Sign-up-text">
+            <h3>What are you waiting for?</h3>
+            <div class="subtext">
+                Just click the button and start your first lesson!
+            </div>
+        </div>
+        <button type="button">Sign up</button>
     </div>
 
     <div class="footer">
