--- a/index.html
+++ b/index.html
@@ -56,14 +56,14 @@
         <div class="Sign-up-text">
             <h3>What are you waiting for?</h3>
             <div class="subtext">
-                Just click the button and start your first lesson!
+                Just click the button over there and start your first lesson!
             </div>
         </div>
         <button type="button">Sign up</button>
     </div>
 
     <div class="footer">
-        
+        I should start a startup
     </div>
 </body>
 </html>
