--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </div>
 
     <div class="top">
-        <div>
+        <div class="left">
             <h1>Science is awesome</h1>
             <div class="subtext">Science is great, but difficult. I want to help you get better and get a different perspective on science.</div>
             <button type="button">Sign up</button>
