style content section

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <div class="top">
         <div class="left">
             <h1>Science is awesome</h1>
-            <div class="subtext">Science is great, but difficult. I want to help you get better and get a different perspective on science.</div>
+            <div class="subtext">Science is great, but difficult. I want to help you get better and a different perspective on science.</div>
             <button type="button">Sign up</button>
         </div>
         <img src="#" alt="Awesome logo">
@@ -34,7 +34,7 @@
                 <div class="subtext">Lorem ipsum dolor sit amet, consetetur sadipscing elitr,</div>
             </div>
             <div class="two">
-                <img src="#" alt="computer science">
+                <img src="#" alt="computer science" >
                 <div class="subtext">Lorem ipsum dolor sit amet, consetetur sadipscing elitr,</div>
             </div>
             <div class="three">
