style quote section

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
     <div class="quote">
         <div class="quote-text">Look deep into nature, and then you will understand everything better.</div>
-        <div>-Albert Einstein</div>
+        <div class="author">-Albert Einstein</div>
     </div>
 
     <div class="sign-up">
