--- a/index.html
+++ b/index.html
@@ -23,26 +23,26 @@
             <div class="subtext">Science is great, but difficult. I want to help you get better and a different perspective on science.</div>
             <button type="button">Sign up</button>
         </div>
-        <img src="#" alt="Awesome logo">
+        <img src="/Img/teaching.png" alt="Awesome logo">
     </div>
 
     <div class="content">
         <h2>All the classes</h2>
         <div class="img-and-text">
             <div class="one">
-                <img src="#" alt="math">
+                <img src="/Img/calculating.png" alt="math">
                 <div class="subtext">Lorem ipsum dolor sit amet, consetetur sadipscing elitr,</div>
             </div>
             <div class="two">
-                <img src="#" alt="computer science" >
+                <img src="/Img/computer-science.png" alt="computer science" >
                 <div class="subtext">Lorem ipsum dolor sit amet, consetetur sadipscing elitr,</div>
             </div>
             <div class="three">
-                <img src="#" alt="chemistry">
+                <img src="/Img/chemistry.png" alt="chemistry">
                 <div class="subtext">Lorem ipsum dolor sit amet, consetetur sadipscing elitr,</div>
             </div>
             <div class="four">
-                <img src="#" alt="physics">
+                <img src="/Img/physics.png" alt="physics">
                 <div class="subtext">Lorem ipsum dolor sit amet, consetetur sadipscing elitr,</div>
             </div>
         </div>
